fix(background-grid): adjust background position for improved alignment

--- a/backend/static/scss/_background_grid.scss
+++ b/backend/static/scss/_background_grid.scss
@@ -8,14 +8,16 @@
     linear-gradient(to right, rgba(230, 230, 230, 0.1) 1px, transparent 1px),
     linear-gradient(to bottom, rgba(230, 230, 230, 0.1) 1px, transparent 1px);
   background-size: 78.52px 78.52px;
-  background-position: 0 0, 0 0;
+  background-position: 0 -3px;
 
   // Full opacity on light backgrounds
   &.bg-light,
-  .bg-light & {
-    background-image:
-      linear-gradient(to right, rgba(230, 230, 230, 1) 1px, transparent 1px),
-      linear-gradient(to bottom, rgba(230, 230, 230, 1) 1px, transparent 1px);
+  &.bg-white,
+  .bg-light &,
+  .bg-white & {
+      background-image:
+        linear-gradient(to right, rgba(230, 230, 230, 1) 1px, transparent 1px),
+        linear-gradient(to bottom, rgba(230, 230, 230, 1) 1px, transparent 1px);
   }
 }
 
